# geometry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  geometry.c  linear.c  main.c  rasterizer.c
.github/workflows/: cmake.yml
include/geometry/: geometry.h  linear.h
